--- a/_includes/ajaxify_content_form.html
+++ b/_includes/ajaxify_content_form.html
@@ -1,3 +1,4 @@
+<h1>jkj</h1>
 <script>
     var contactForm = document.querySelector('form'),
     inputEmail = contactForm.querySelector('[name="email"]'),
