--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer class="center">
   <div class="measure">
     <small>
-      Theme crafted with &lt;3 by <a href="http://johnotander.com">John Otander</a> (<a href="https://twitter.com/4lpine">@4lpine</a>).<br>
-      &lt;/&gt; available on <a href="https://github.com/johnotander/pixyll">Github</a>.
+      This is a blog by Carl Bednorz via FRNKN - writing about E-Commerce, Web Development, UX and agile IT project management.
+      Follow me on <a href="https://twitter.com/frankenapps">Twitter</a> or on <a href="https://de.linkedin.com/in/carl-bednorz-b7542011">LinkedIn</a>
     </small>
   </div>
 </footer>
