--- a/_includes/post_footer.html
+++ b/_includes/post_footer.html
@@ -1,10 +1,11 @@
 <div class="py2 post-footer">
-  <img src="{{ site.baseurl }}/images/me.jpeg" alt="John Otander" class="avatar" />
+  <!--<img src="{{ site.baseurl }}/images/me.jpeg" alt="John Otander" class="avatar" />-->
   <p>
-    Pixyll is an open-source Jekyll theme that's built by <a href="http://johnotander.com">John Otander</a>.
-    When he's not writing code and building things, he likes to ski. A. Lot.
+
+    This is a blog by Carl Bednorz via FRNKN - writing about E-Commerce, Web Development, UX and agile IT project management.
+
   </p>
   <p>
-    Follow him on <a href="https://twitter.com/4lpine">Twitter</a>.
+    Follow me on <a href="https://twitter.com/frankenapps">Twitter</a> or on <a href="https://de.linkedin.com/in/carl-bednorz-b7542011">LinkedIn</a>
   </p>
 </div>
