--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,9 @@
       This is a blog by Carl Bednorz via FRNKN - writing about E-Commerce, Web Development, UX and agile IT project management.
       Follow me on <a href="https://twitter.com/frankenapps">Twitter</a> or on <a href="https://de.linkedin.com/in/carl-bednorz-b7542011">LinkedIn</a>
     </small>
+    <small>
+    <br>  <a rel="nofollow" href="/impressum/">Impressum - Imprint</a>
+    </small>
   </div>
 </footer>
 {% if site.enable_anchorjs %}<!-- AnchorJS -->
